Add link between CSS and HTML.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <div class="content">
-      {{ content }}
-    </div>
+	<head>
+	  <link rel="stylesheet" href="css/main.css">
+	</head>
+
+	<div class="content">
+	  {{ content }}
+	</div>
 </html>
