Add the margin to the content.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <link rel="stylesheet" href="css/main.css">
+	  <link rel="stylesheet">
 	</head>
 
-	<div class="content">
+	<div class="content" href="css/main.css">
 	  {{ content }}
 	</div>
 </html>
