--- a/css/main.css
+++ b/css/main.css
@@ -15,4 +15,4 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Import partials from the `minima` theme.
-@import "minima";
+@import "jekyll-theme-slate";
