--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,19 @@
-<footer class="site-header">
+<header class="site-header">
 
-  <p> Header over here.</p>
+  <div class="wrapper">
 
-</footer>
+    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+
+    <nav class="site-nav">
+      <div class="trigger">
+        {% for my_page in site.pages %}
+          {% if my_page.title %}
+          <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+          {% endif %}
+        {% endfor %}
+      </div>
+    </nav>
+
+  </div>
+
+</header>
