--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,22 +1,11 @@
 <head>
 
-    <div class="wrapper">
-
-        <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
-        <nav class="site-nav">
-            <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/page">Page</a>
-
-        {% assign pages_list = site.pages | sort:"url" %}
-        {% for node in pages_list %}
-          {% if node.title != null %}
-            {% if node.layout == "page" %}
-              <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
-            {% endif %}
-          {% endif %}
-        {% endfor %}
-    </nav>
-      </div>
+  <div id="nav">
+    <ul>
+        <li><a href="/">HOME</a></li>
+        <li><a href="/page/">PAGE</a></li>
+    </ul>
+</div>
 
 
   <meta charset="utf-8">
