--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,9 @@
 <header class="site-header">
 
-  <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
-    <nav class="site-nav">
-      <div class="trigger">
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </nav>
-
-  </div>
+  <div id="nav">
+    <ul>
+        <li><a href="/">HOME</a></li>
+        <li><a href="/page/">PAGE</a></li>
+    </ul>
 
 </header>
