--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,20 +1,12 @@
 <footer class="site-footer">
-
-  <div class="wrapper">
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-					<p> Hum, I think the picture in this footer is too big. </p>
-          {% if site.github_username %}
-          <li>
-          {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-        </ul>
-
-      </div>
-
+  <div class="icon-bar">
+    <ul>
+      {% if site.github_username %}
+      <li>
+      {% include icon-github.html username=site.github_username %}
+      </li>
+      {% endif %}
+    </ul>
   </div>
 
 </footer>
