--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-ul {
+.site-header ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -6,11 +6,11 @@ ul {
     background-color: #333;
 }
 
-li {
+.site-header li {
     float: left;
 }
 
-li a {
+.site-header li a {
     display: block;
     color: white;
     text-align: center;
@@ -18,8 +18,30 @@ li a {
     text-decoration: none;
 }
 
-li a:hover {
+.site-header li a:hover {
     background-color: #111;
 }
+
+.icon--github {
+    margin: 0 auto 0 auto;
+  }
+
+  .icon--github ul {
+    margin: 20px 0 0 0;
+    text-align: center;
+  }
+
+  .icon--github ul li {
+    display: inline;
+  }
+
+  .icon--github ul li a {
+    text-decoration: none;
+  }
+
+  .icon--github ul li svg {
+    width: 40px;
+    height: 40px;
+  }
 
 @import "jekyll-theme-slate";
