--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <ul>
       {% if site.github_username %}
       <li>
-      {% include icon-github.html username=site.github_username %}
+      {% include icon-github.html %}
       </li>
       {% endif %}
     </ul>
