--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,15 +37,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        {% if site.github.is_project_page %}
-        <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-        {% if site.github_username %}
-        <li>
-        {% include icon-github.html username=site.github_username %}
-        </li>
-        {% endif %}
+        {% include footer.html %}
       </footer>
     </div>
 
