--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,11 +23,12 @@
 }
 
 .icon-bar {
+    border-top : 0.5px solid rgb(73, 71, 71);
     margin: 0 auto 0 auto;
   }
 
   .icon-bar ul {
-    margin: 20px 0 0 0;
+    margin: 0px 0 0 0;
     text-align: left;
   }
 
