Tesst to add a picture in head of site.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,12 @@
     <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
 
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <section id="top" class="one">
+      <div class="container">
+        <a href="#" class="image featured"><img src="/blog/images/image1.jpg" /></a>
+
+      </div>
+    </section>
   </head>
 
   <body>
