--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,27 +22,34 @@
     background-color: #111;
 }
 
+#header_wrap {
+  background-image: url("/blog/images/image1.jpg");
+  background-size:cover;
+  color: white;
+  font-weight:200;
+}
+
 .icon-bar {
-    border-top : 0.5px solid rgb(73, 71, 71);
-    margin: 0 auto 0 auto;
-  }
+  border-top : 0.5px solid rgb(73, 71, 71);
+  margin: 0 auto 0 auto;
+}
 
-  .icon-bar ul {
-    margin: 0px 0 0 0;
-    text-align: left;
-  }
+.icon-bar ul {
+  margin: 0px 0 0 0;
+  text-align: left;
+}
 
-  .icon-bar ul li {
-    display: inline;
-  }
+.icon-bar ul li {
+  display: inline;
+}
 
-  .icon-bar ul li a {
-    text-decoration: none;
-  }
+.icon-bar ul li a {
+  text-decoration: none;
+}
 
-  .icon-bar ul li svg {
-    width: 30px;
-    height: 30px;
-  }
+.icon-bar ul li svg {
+  width: 30px;
+  height: 30px;
+}
 
 @import "jekyll-theme-slate";
