Make some changes in default structure.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <a href="{{ "/" | prepend: site.baseurl }}">Home</a>
       </li>
       <li>
-        <a href="{{ "/page/" | prepend: site.baseurl }}">Page</a>
+        <a href="{{ "/posts/" | prepend: site.baseurl }}">Posts</a>
       </li>
     </ul>
   </div>
