--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,16 +10,13 @@
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
 
+  <!-- HEADER -->
+  <div id="header_background">
+      <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
+  </div>
+  {% include header.html %}
+
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          {% include header.html %}
-        </header>
-    </div>
-
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
