--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <header class="site-header">
-  <div id="nav">
+  <div id="header_background">
+    <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
     <ul>
       <li>
         <a href="{{ "/" | prepend: site.baseurl }}">Home</a>
