--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width,maximum-scale=2">
-    <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  </head>
-
-  <!-- HEADER -->
-  <div id="header_background">
-      <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-  </div>
-  {% include header.html %}
+  <!-- HEAD -->
+  {% include head.html %}
 
   <body>
+    <!-- HEADER -->
+    {% include header.html %}
+
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
