--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   <div class="icon-bar">
     <ul>
-      {% if site.github_username %}
+      Github page: {% if site.github_username %}
       <li>
       {% include icon-github.html username=site.github_username %}
       </li>
