--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,11 @@
       </li>
       {% endif %}
     </ul>
+    <ul>
+      <li>
+        Gitlab page: <img src="/blog/images/icon-gitlab.png" width="30" height="30"> <a href='https://gitlab.inria.fr/abelcour'>abelcour</a>
+      </li>
+    </ul>
   </div>
 
 </footer>
