Fix issue with margin. Add a presentation.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,8 @@
     </ul>
     <ul>
       <li>
-        Gitlab page: <img src="/blog/images/icon-gitlab.png" width="30" height="30"> <a href='https://gitlab.inria.fr/abelcour'>abelcour</a>
+        Gitlab page: <a href='https://gitlab.inria.fr/abelcour'><img src="/blog/images/icon-gitlab.png" width="30" height="30"></a>
+        <a href='https://gitlab.inria.fr/abelcour'>abelcour</a>
       </li>
     </ul>
   </div>
