--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,11 @@ html,body {
   padding:0;
 }
 
+div.Home p {
+  margin: auto;
+  width: 75%;
+}
+
 #header_background {
   background-color: #333;
   color: white;
