Change homefront picture size.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,15 @@
 <footer class="site-footer">
   <div class="icon-bar">
     <ul>
-      Github page: {% if site.github_username %}
       <li>
-      {% include icon-github.html username=site.github_username %}
+        Github page: {% if site.github_username %}
+        {% include icon-github.html username=site.github_username %}
       </li>
       {% endif %}
     </ul>
     <ul>
       <li>
-        Gitlab page: <a href='https://gitlab.inria.fr/abelcour'><img src="/blog/images/icon-gitlab.png" width="30" height="30"></a>
+        Gitlab page: <a href='https://gitlab.inria.fr/abelcour'><img src="/blog/images/icon-gitlab.png" alt="gitlab_icon" width="30" height="30"></a>
         <a href='https://gitlab.inria.fr/abelcour'>abelcour</a>
       </li>
     </ul>
