--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
     </ul>
     <ul>
       <li>
-        Gitlab page: <a href='https://gitlab.inria.fr/abelcour'><img src="/blog/images/icon-gitlab.png" alt="gitlab_icon" width="30" height="30"></a>
+        Gitlab page: <a href='https://gitlab.inria.fr/abelcour'><img src="{{site.baseurl}}/images/icon-gitlab.png" alt="gitlab_icon" width="30" height="30"></a>
         <a href='https://gitlab.inria.fr/abelcour'>abelcour</a>
       </li>
     </ul>
