--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,5 @@
   <meta name="viewport" content="width=device-width,maximum-scale=2">
   <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
 
-  <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+  <link rel="stylesheet" type="text/css" media="screen" href="{{ '{{site.baseurl}}/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 </head>
