--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
-<head>
+<head title="metadata_head">
   <meta charset='utf-8'>
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,maximum-scale=2">
   <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
 
