--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,7 @@
         <!-- MAIN CONTENT -->
     <div class="page-content">
       <div class="wrapper">
+        <h1>{{page.title}}</h1>
         {{ content }}
       </div>
     </div>
