--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,8 @@
   <meta name="viewport" content="width=device-width,maximum-scale=2">
   <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
 
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+
   <link rel="stylesheet" type="text/css" media="screen" href="{{ '{{site.baseurl}}/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 </head>
