--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,9 @@
       <li>
         <a href="{{ "/posts/" | prepend: site.baseurl }}">Posts</a>
       </li>
+      <li>
+        <a href="{{ "/publications/" | prepend: site.baseurl }}">Publications</a>
+      </li>
     </ul>
   </div>
 
