--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,16 @@
+div.Publications p {
+  margin: auto;
+  width: 90%;
+}
+
+div.Publications h2 {
+  text-decoration: underline;
+  font-size: 1.5em;
+  font-weight:normal;
+  margin: auto;
+  width: 95%;
+}
+
 html,body {
   margin:0;
   padding:0;
