Add Tools page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,9 @@
       <li>
         <a href="{{ "/publications/" | prepend: site.baseurl }}">Publications</a>
       </li>
+      <li>
+        <a href="{{ "/tools/" | prepend: site.baseurl }}">Tools</a>
+      </li>
     </ul>
   </div>
 
