Add Bio page. Also modify structure of main html pages.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,13 +5,16 @@
         <a href="{{ "/" | prepend: site.baseurl }}">Home</a>
       </li>
       <li>
-        <a href="{{ "/posts/" | prepend: site.baseurl }}">Posts</a>
+        <a href="{{ "/pages/posts/" | prepend: site.baseurl }}">Posts</a>
       </li>
       <li>
-        <a href="{{ "/publications/" | prepend: site.baseurl }}">Publications</a>
+        <a href="{{ "/pages/publications/" | prepend: site.baseurl }}">Publications</a>
       </li>
       <li>
-        <a href="{{ "/tools/" | prepend: site.baseurl }}">Tools</a>
+        <a href="{{ "/pages/tools/" | prepend: site.baseurl }}">Tools</a>
+      </li>
+      <li>
+        <a href="{{ "/pages/bio/" | prepend: site.baseurl }}">Bio</a>
       </li>
     </ul>
   </div>
