Fix bio folder name.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
         <a href="{{ "/pages/tools/" | prepend: site.baseurl }}">Tools</a>
       </li>
       <li>
-        <a href="{{ "/pages/bio_pages/bio/" | prepend: site.baseurl }}">Bio</a>
+        <a href="{{ "/pages/bios/bio/" | prepend: site.baseurl }}">Bio</a>
       </li>
     </ul>
   </div>
