--- a/_layouts/biopages.html
+++ b/_layouts/biopages.html
@@ -9,8 +9,7 @@
 
         <!-- MAIN CONTENT -->
     <div class="page-content">
-
-      <div class="span-6">	              
+      <div class="leftnavbar">	              
         {% include bio_nav_bar.html %}            
       </div>
       <div class="wrapper">
