--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,22 +63,16 @@ img.homefront_pic {
   font-size: 14px;
 }
 
-.leftnav {
-  height: 100%; /* 100% Full-height */
-  width: 160px; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  background-color: #111; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
+.page-content leftnavbar {
+  height: 100%;
+  width: 160px;
+  border-left: 160px solid rgb(0, 0, 0);
 }
 
-.leftnav a {
+.page-content leftnavbar a {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 6px;
   color: #818181;
   display: block;
 }
