--- a/_layouts/biopages.html
+++ b/_layouts/biopages.html
@@ -12,7 +12,7 @@
       <div class="leftnavbar">	              
         {% include bio_nav_bar.html %}            
       </div>
-      <div class="wrapper">
+      <div class="mainbio">
         <h1>{{page.title}}</h1>
         {{ content }}
       </div>
