--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,15 +24,19 @@ div.Home p {
 div.leftnavbar {
   height: 100%;
   width: 160px;
-  border-left: 160px solid rgb(0, 0, 0);
 }
 
 div.leftnavbar a {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
-  font-size: 6px;
+  font-size: 12px;
   color: #818181;
   display: block;
+}
+
+div.mainbio {
+  margin-left: 160px;
+  padding: 0px 10px;
 }
 
 img.homefront_pic {
