Forget to update html page after css update.

--- a/_layouts/biopages.html
+++ b/_layouts/biopages.html
@@ -8,7 +8,7 @@
     {% include header.html %}
 
         <!-- MAIN CONTENT -->
-    <div class="page-content">
+    <div class="biocontainer">
       <div class="leftnavbar">	              
         {% include bio_nav_bar.html %}            
       </div>
