--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
+  <link rel="stylesheet" href="{{ site.url | append: site.baseurl }}/assets/css/post.css">
   <!-- HEAD -->
   {% include head.html %}
 
