Add color hilight in Bio pages. Add other html files in Bio.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,19 +2,19 @@
   <div id="header_background">
     <ul>
       <li>
-        <a href="{{ "/" | prepend: site.baseurl }}">Home</a>
+        <a href="{{site.baseurl}}/">Home</a>
       </li>
       <li>
-        <a href="{{ "/pages/posts/" | prepend: site.baseurl }}">Posts</a>
+        <a href="{{site.baseurl}}/pages/posts/">Posts</a>
       </li>
       <li>
-        <a href="{{ "/pages/publications/" | prepend: site.baseurl }}">Publications</a>
+        <a href="{{site.baseurl}}/pages/publications/">Publications</a>
       </li>
       <li>
-        <a href="{{ "/pages/tools/" | prepend: site.baseurl }}">Tools</a>
+        <a href="{{site.baseurl}}/pages/tools/">Tools</a>
       </li>
       <li>
-        <a href="{{ "/pages/cv/2017cdd" | prepend: site.baseurl }}">Bio</a>
+        <a href="{{site.baseurl}}/pages/cv/2017_cdd">Bio</a>
       </li>
     </ul>
   </div>
