Add algae picture.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,11 @@
         <a href='https://gitlab.inria.fr/abelcour'>abelcour</a>
       </li>
     </ul>
+    <ul>
+      <li>
+        Apart from Github and Gitlab logos, all pictures on this blog have been made by me.
+      </li>
+    </ul>
   </div>
 
 </footer>
