--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,14 @@ div.mainbio {
   padding: 0px 10px;
 }
 
+div.cv_content p {
+  line-height: 20px;
+  margin: 1em 20em 1em 30em;
+  font-weight:300;
+  background:#ffffff;
+  color:#333;
+}
+
 img.homefront_pic {
   width: 50%;
   height: 50%;
