Update mpwt link. Delete gitlab inria link.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,13 +9,7 @@
     </ul>
     <ul>
       <li>
-        Gitlab page: <a href='https://gitlab.inria.fr/abelcour'><img src="{{site.baseurl}}/images/icon-gitlab.png" alt="gitlab_icon" width="30" height="30"></a>
-        <a href='https://gitlab.inria.fr/abelcour'>abelcour</a>
-      </li>
-    </ul>
-    <ul>
-      <li>
-        Apart from Github and Gitlab logos, all pictures on this blog have been made by me.
+        Apart from Github logo, all pictures on this blog have been made by me.
       </li>
     </ul>
   </div>
