Add ORCID in footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,10 +6,16 @@
         {% include icon-github.html username=site.github_username %}
       </li>
       {% endif %}
+      <li>
+        ORCID page: <div itemscope itemtype="https://schema.org/Person">
+          <a itemprop="sameAs" content="https://orcid.org/0000-0003-1170-0785" href="https://orcid.org/0000-0003-1170-0785" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;">
+            <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">Arnaud Belcour</a>
+        </div>
+      </li>
     </ul>
     <ul>
       <li>
-        Apart from Github logo, all pictures on this blog have been made by me.
+        Apart from the Github and ORCID logos, all pictures on this blog have been made by me.
       </li>
     </ul>
   </div>
