--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
       </li>
       {% endif %}
       <li>
-        <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-1170-0785" href="https://orcid.org/0000-0003-1170-0785" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon"></a>ORCID page</div>
+        ORCID: <a href="https://orcid.org/0000-0003-1170-0785">0000-0003-1170-0785</a>
       </li>
     </ul>
     <ul>
