--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
     </ul>
     <ul>
       <li>
-        Apart from the Github and ORCID logos, all pictures on this blog have been made by me.
+        Apart from the Github logo, all other pictures on this blog have been made by me.
       </li>
     </ul>
   </div>
