--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
         <a href="{{site.baseurl}}/pages/tools/">Tools</a>
       </li>
       <li>
-        <a href="{{site.baseurl}}/pages/cv/2019_phd">Bio</a>
+        <a href="{{site.baseurl}}/pages/cv/2023_postdoc">Bio</a>
       </li>
     </ul>
   </div>
